--- a/less/layout.less
+++ b/less/layout.less
@@ -11,7 +11,7 @@ body {
 	font-size: 16px;
 }
 header#header h1, h2 {
-	font-family: @tituloprincipal;
+	font-family: "lucida grande";
 }
 // Selecciçión
 ::selection {
