--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @mainfont: 'Raleway', sans-serif;
 @tituloprincipal: 'lobster', cursive; 
 @tituloarticulo: 'Quicksand', cursive; 
+@resumen: "lucida grande";
 
 // Colores =========================================
 
@@ -30,15 +31,18 @@
 @colorprincipal: rgb(111,129,148);
 
 // Texto terminal
-@textoterminal: #66bb67;
-@textoterminaltipear: #3efc30;
+// @textoterminal: #66bb67;
+@textoterminal: white;
+// @textoterminaltipear: #3efc30;
+@textoterminaltipear: #36d9fb;
 
 // Color ventana terminal
-@ventanaterminal: rgba(0,0,0,.65);
+@ventanaterminal: #424242;
 @ventanaterminalcopiar: rgba(0,0,0,.3);
 
 // azul
-@azul: #3d63f5;
+// @azul: #3d63f5;
+@azul: #3b84bf;
 
 // Márgenes =========================================
 
