--- a/less/layout.less
+++ b/less/layout.less
@@ -11,12 +11,12 @@ body {
 	font-size: 16px;
 }
 header#header h1, h2 {
-	font-family: "lucida grande";
+	font-family: @tituloprincipal;
 }
 // Selecciçión
 ::selection {
-	background: orange;
-	color: white;
+	background: yellow;
+	color: black;
 }
 // Break points
 @media screen and (min-width: 992px) {
