--- a/less/variables.less
+++ b/less/variables.less
@@ -14,6 +14,8 @@
 @colorborde: rgb(198,207,211);
 // Color hover
 @colorhover: rgba(0,0,0,.7);
+// Color fondo figure
+@colorfigure: #ebf0f4;
 
 // Menu titulo
 @menutitulo: rgb(144,156,172);
