--- a/less/layout.less
+++ b/less/layout.less
@@ -30,3 +30,21 @@ header#header h1, h2 {
 @media screen and (max-width: 480px) {
 	@import "bp1.less";
 }
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+
+.clearfix {display: inline-block;}
+
+
+/* Hides from IE-mac \*/
+* html .clearfix {height: 1%;}
+.clearfix {display: block;}
+/* End hide from IE-mac */
+/* @end */
