--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'icono';
+  src: url("../fonts/icomoon.eot");
+  src: url("../fonts/icomoon.eot?#iefix") format('embedded-opentype'), url("../fonts/icomoon.ttf") format('truetype'), url("../fonts/icomoon.woff") format('woff'), url("../fonts/icomoon.svg#icomoon") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   background: #edf1f3;
   color: #343434;
@@ -7,9 +14,90 @@ article {
   background: #fff;
 }
 header img {
-  width: 80px;
   display: block;
   margin: 1em auto 0 auto;
+  width: 80px;
+}
+footer {
+  background: #3b84bf;
+  height: 10em;
+}
+footer .avatar {
+  background: #fff;
+  display: inline-block;
+  float: left;
+  height: 10em;
+  position: relative;
+  width: 8em;
+}
+footer .avatar:after {
+  border-top: solid 0 #008000;
+  border-left: solid 5em #fff;
+  border-bottom: solid 10em transparent;
+  border-right: solid 10px transparent;
+  content: "";
+  left: 8em;
+  position: absolute;
+  top: 0px;
+}
+footer .avatar img {
+  border-radius: 50%;
+  height: auto;
+  left: 5.5em;
+  width: 4em;
+  position: absolute;
+  top: 1em;
+  z-index: 5;
+}
+footer .avatar p {
+  left: 0.7em;
+  line-height: 1.2em;
+  position: absolute;
+  text-align: right;
+  top: 1.4em;
+}
+footer .social {
+  position: relative;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+  z-index: 3;
+}
+footer .social a {
+  color: #fff;
+  font-family: raleway, sans-serif;
+  font-weight: bold;
+}
+footer .social .twitter,
+footer .social .github,
+footer .social .email {
+  position: absolute;
+}
+footer .social .twitter:before,
+footer .social .github:before,
+footer .social .email:before {
+  font-family: icono;
+  margin: 0 0.5em 0 0;
+  vertical-align: bottom;
+}
+footer .social .twitter {
+  right: 1em;
+  top: 1.5em;
+}
+footer .social .twitter:before {
+  content: "\e606";
+}
+footer .social .github {
+  right: 3em;
+  top: 4em;
+}
+footer .social .github:before {
+  content: "\e609";
+}
+footer .social .email {
+  right: 1em;
+  top: 6.5em;
+}
+footer .social .email:before {
+  content: "\e602";
 }
 h1 {
   font-size: 4em;
@@ -19,17 +107,27 @@ h1 {
 }
 h2 {
   border-top: 1px solid #c6cfd3;
-  font-size: 1.3em;
   font-family: lobster, sans-serif;
-  margin: 0 0.5em 1em 0.5em;
+  font-size: 1.3em;
+  margin: 0.1em 0.5em 1em 0.5em;
   text-align: center;
 }
 h3 {
-  font-size: 3em;
   font-family: lato, sans-serif;
+  font-size: 3em;
   letter-spacing: -3px;
   margin: 0;
+  padding: 0.5em 0;
   text-align: center;
+}
+nav {
+  overflow-x: hidden;
+}
+p {
+  margin: 0.5em;
+}
+p:first-child {
+  margin: 0 0.5em;
 }
 #mm0 {
   background: #3b84bf;
@@ -37,7 +135,7 @@ h3 {
   color: #fff;
   font-size: 1.5em;
   height: 2em;
-  position: relative;
   left: -5px;
+  position: relative;
   width: 107%;
 }
