--- a/estilos.styl
+++ b/estilos.styl
@@ -43,12 +43,16 @@ gris = #343434
 // .icon-book:before {
 // 	content: "\e600";
 // }
+// .icon-list:before {
+// 	content: "\e605";
+// }
 // .icon-twitter:before {
 // 	content: "\e606";
 // }
 // .icon-github:before {
 // 	content: "\e609";
 // }
+
 
 
 body 
@@ -84,23 +88,45 @@ footer
 			position absolute
 			top 0px
 		img
+			border 2px solid white
 			border-radius 50%
+			box-shadow 0 0 2px black
 			height auto
-			left 5.5em
+			left 1.3em
 			width 4em
 			position absolute
 			top 1em
 			z-index 5
+		
+		// div
+		// 	-moz-transform skew(-27deg)
+		// 	-o-transform skew(-27deg)
+		// 	-webkit-transform skew(-27deg)
+		// 	background white
+		// 	box-shadow 0 0 1px rgba(black,1)
+		// 	height 45px
+		// 	left 6.5em
+		// 	margin 10px 0 0 -40px
+		// 	position absolute
+		// 	top .7em
+		// 	width 95px
+		// 	z-index 4
+
 		p
-			left .7em
-			line-height 1.2em;
+			color gris
+			font-size 1em
+			left 5.5em
+			line-height 1.1em;
 			position absolute
-			text-align right
+			text-align left
+			// text-shadow 1px 1px 1px black
 			top 1.4em
+			z-index 4
+				
 
 	.social
 		position relative
-		text-shadow 1px 1px 1px rgba(black,.5)
+		text-shadow 1px 1px 1px black
 		z-index 3
 		a
 			color white
@@ -116,22 +142,32 @@ footer
 				vertical-align bottom
 
 		.twitter
-			right 1em
+			right 1.8em
+			text-decoration none
 			top 1.5em
 			&:before
 				content "\e606"
+			&:hover
+				color #21b2e9
 				
 		.github
-			right 3em
+			right 3.5em
+			text-decoration none
 			top 4em
 			&:before
 				content "\e609"
+			&:hover
+				color grey
 
 		.email
 			right 1em
+			text-decoration none
 			top 6.5em
 			&:before
 				content "\e602"
+			&:hover
+				color #dec164
+				
 				
 
 
