--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,7 +63,6 @@ footer .avatar p {
 }
 footer .social {
   position: relative;
-  text-shadow: 1px 1px 1px #000;
   z-index: 3;
 }
 footer .social a {
@@ -159,6 +158,33 @@ p:first-child {
   left: -5px;
   position: relative;
   width: 108.5%;
+}
+.arriba {
+  background: #343434;
+  border-radius: 50%;
+  bottom: 1em;
+  color: #fff;
+  height: 3em;
+  opacity: 0.6;
+  position: fixed;
+  left: 1em;
+  width: 3em;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.arriba a {
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+}
+.arriba a:after {
+  content: "\e608";
+  font-family: icono;
+  font-size: 2em;
+  text-align: center;
+  position: absolute;
+  top: 0em;
+  left: 0.45em;
 }
 .lista {
   color: #fff;
