--- a/estilos.styl
+++ b/estilos.styl
@@ -110,7 +110,7 @@ footer
 
 	.social
 		position relative
-		text-shadow 1px 1px 1px black
+		// text-shadow 1px 1px 1px black
 		z-index 3
 		a
 			color white
@@ -193,6 +193,32 @@ p
 	left -5px
 	position relative
 	width 108.5%
+
+.arriba
+	background gris
+	border-radius 50%
+	bottom 1em
+	color white
+	height 3em
+	opacity .6
+	position fixed
+	left 1em
+	width 3em
+	-webkit-transition all .5s ease
+	transition all .5s ease
+	a 
+		color: white;
+		text-decoration none
+		position relative
+		&:after
+			content "\e608"
+			font-family icono
+			font-size 2em
+			text-align center
+			position absolute
+			top 0em
+			left .45em
+		
 
 .lista
 	color white
